[gd_scene load_steps=34 format=2]

[ext_resource path="res://main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/ui/fonts/Jost/static/Jost-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/UI/title_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/misc/follow_mouse.gd" type="Script" id=4]
[ext_resource path="res://scenes/Register/Menu.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/fonts/Jost/static/Jost-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/BaseUiComponents/ScalableControl/PathernsUI_ScalableControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Register/RegisterForm.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/BaseUiComponents/BaseLabel/BaseLabel.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Network/CustomRequest/HTTPRequest.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Register/CenterContainer.gd" type="Script" id=11]
[ext_resource path="res://scenes/BaseUiComponents/BaseNeutralPopup/NeutralPopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Register/ErrorPopup.gd" type="Script" id=13]
[ext_resource path="res://resources/UI/small_dynamicfont.tres" type="DynamicFont" id=14]
[ext_resource path="res://resources/UI/styleboxflat_transparent.tres" type="StyleBox" id=15]
[ext_resource path="res://scenes/BaseUiComponents/MenuButton/MenuButton.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=2]
size = 116
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=7]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 1805, 0 ), Vector2( 1795, 0 ), Vector2( 1805, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 1805, 0 ), Vector2( 1815, 0 ), Vector2( 1805, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 1805, 0 ), Vector2( 1795, 0 ), Vector2( 1805, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 1805, 0 ), Vector2( 1815, 0 ), Vector2( 1805, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "main"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1028 ) ]
}

[sub_resource type="DynamicFont" id=17]
size = 50
extra_spacing_bottom = -30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 450
use_mipmaps = true
use_filter = true
extra_spacing_top = -200
extra_spacing_bottom = -200
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
resource_name = "main"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1028 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 26, 0 ), Vector2( 36, 0 ), Vector2( 26, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 26, 0 ), Vector2( 16, 0 ), Vector2( 26, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 26, 0 ), Vector2( 36, 0 ), Vector2( 26, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "main"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 5.46416, 1, 1 ),
"update": 0,
"values": [ Vector2( 26, 0 ), Vector2( 16, 0 ), Vector2( 26, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.788235, 0.839216, 0.87451, 0.733333 )
corner_radius_top_right = 100
corner_radius_bottom_left = 100
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0.690196, 0.0705882, 0.921569 )
corner_radius_top_left = 100
corner_radius_bottom_right = 100
corner_detail = 1
shadow_color = Color( 1, 0.690196, 0.0705882, 0.0588235 )
shadow_size = 100

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 40.0
content_margin_right = 40.0
bg_color = Color( 0.909804, 0.270588, 0.270588, 0.839216 )
border_color = Color( 0.321569, 0.380392, 0.419608, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.0862745 )
shadow_size = 200
anti_aliasing_size = 5

[sub_resource type="Animation" id=16]
resource_name = "Title"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Scalable:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 6, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Scalable:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Title/Zug:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Title/Zug2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Title/Zug2:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 10 ),
"transitions": PoolRealArray( 1, 1, 3.61 ),
"update": 0,
"values": [ Color( 0.941176, 0.960784, 0.976471, 1 ), Color( 0.941176, 0.960784, 0.976471, 1 ), Color( 0.0666667, 0.0745098, 0.137255, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Title/Zug:custom_colors/font_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 10 ),
"transitions": PoolRealArray( 1, 1, 3.605 ),
"update": 0,
"values": [ Color( 0.941176, 0.960784, 0.976471, 1 ), Color( 0.941176, 0.960784, 0.976471, 1 ), Color( 0.0666667, 0.0745098, 0.137255, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Title/Anicet:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 8.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Title/Anicet:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 8.8, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.180392, 0.290196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScroll" type="Control" parent="."]
margin_top = 1028.0
margin_right = 40.0
margin_bottom = 1068.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="TitleScroll"]
margin_left = -1472.0
margin_top = 307.0
margin_right = -1432.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TitleScroll/Control3"]
anchor_bottom = 1.0
margin_left = 1805.0
margin_right = 1885.0
margin_bottom = 1206.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 42, 384 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.909804, 0.270588, 0.270588, 0.133333 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScroll/Control3/Label2"]
autoplay = "main"
anims/main = SubResource( 7 )

[node name="Label3" type="Label" parent="TitleScroll/Control3"]
anchor_bottom = 1.0
margin_left = 1805.0
margin_right = 1885.0
margin_bottom = 1206.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 42, 384 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.458824, 1, 0.176471 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScroll/Control3/Label3"]
autoplay = "main"
anims/main = SubResource( 8 )

[node name="Label4" type="Label" parent="TitleScroll/Control3"]
anchor_bottom = 1.0
margin_left = 1805.0
margin_right = 1885.0
margin_bottom = 1206.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 42, 384 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.960784, 0.976471, 0.141176 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="TitleScroll"]
margin_left = -1472.0
margin_top = -720.0
margin_right = -1432.0
margin_bottom = -680.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TitleScroll/Control4"]
anchor_bottom = 1.0
margin_left = 1805.0
margin_right = 1885.0
margin_bottom = 1206.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 42, 384 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.909804, 0.270588, 0.270588, 0.133333 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScroll/Control4/Label2"]
autoplay = "main"
anims/main = SubResource( 9 )

[node name="Label3" type="Label" parent="TitleScroll/Control4"]
anchor_bottom = 1.0
margin_left = 1805.0
margin_right = 1885.0
margin_bottom = 1206.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 42, 384 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.458824, 1, 0.176471 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScroll/Control4/Label3"]
autoplay = "main"
anims/main = SubResource( 10 )

[node name="Label4" type="Label" parent="TitleScroll/Control4"]
anchor_bottom = 1.0
margin_left = 1805.0
margin_right = 1885.0
margin_bottom = 1206.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 42, 384 )
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.960784, 0.976471, 0.141176 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScroll"]
autoplay = "main"
anims/main = SubResource( 11 )

[node name="Title" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anicet" type="Label" parent="Title"]
margin_left = 488.0
margin_top = 72.0
margin_right = 850.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.0666667, 0.0745098, 0.137255, 1 )
text = "ANICET'S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zug" type="Label" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -880.0
margin_top = 200.0
margin_right = 366.0
margin_bottom = 667.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.0666667, 0.0745098, 0.137255, 1 )
text = "ZUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zug2" type="Label" parent="Title"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -880.0
margin_top = -488.0
margin_right = 1483.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.0666667, 0.0745098, 0.137255, 1 )
text = "ZWANG"

[node name="TitleScrollReverse" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 39.9999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="TitleScrollReverse"]
autoplay = "main"
anims/main = SubResource( 1 )

[node name="Control" type="Control" parent="TitleScrollReverse"]
margin_left = 184.0
margin_right = 224.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TitleScrollReverse/Control"]
anchor_bottom = 1.0
margin_left = 26.0
margin_right = 106.0
margin_bottom = 728.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.909804, 0.270588, 0.270588, 0.133333 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScrollReverse/Control/Label2"]
autoplay = "main"
anims/main = SubResource( 3 )

[node name="Label3" type="Label" parent="TitleScrollReverse/Control"]
anchor_bottom = 1.0
margin_left = 26.0
margin_right = 106.0
margin_bottom = 728.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.458824, 1, 0.176471 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScrollReverse/Control/Label3"]
autoplay = "main"
anims/main = SubResource( 4 )

[node name="Label4" type="Label" parent="TitleScrollReverse/Control"]
anchor_bottom = 1.0
margin_left = 26.0
margin_right = 106.0
margin_bottom = 728.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.960784, 0.976471, 0.141176 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="TitleScrollReverse"]
margin_left = 184.0
margin_top = -1032.0
margin_right = 224.0
margin_bottom = -992.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TitleScrollReverse/Control2"]
anchor_bottom = 1.0
margin_left = 26.0
margin_right = 106.0
margin_bottom = 728.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.909804, 0.270588, 0.270588, 0.133333 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScrollReverse/Control2/Label2"]
autoplay = "main"
anims/main = SubResource( 5 )

[node name="Label3" type="Label" parent="TitleScrollReverse/Control2"]
anchor_bottom = 1.0
margin_left = 26.0
margin_right = 106.0
margin_bottom = 728.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.458824, 1, 0.176471 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleScrollReverse/Control2/Label3"]
autoplay = "main"
anims/main = SubResource( 6 )

[node name="Label4" type="Label" parent="TitleScrollReverse/Control2"]
anchor_bottom = 1.0
margin_left = 26.0
margin_right = 106.0
margin_bottom = 728.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.960784, 0.976471, 0.141176 )
custom_constants/line_spacing = -40
text = "ZUGZWANG"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scalable" parent="." instance=ExtResource( 7 )]
anchor_right = 1.81818
anchor_bottom = 1.81818
rect_scale = Vector2( 0.55, 0.55 )
scale = 0.55

[node name="MainMenu" type="VBoxContainer" parent="Scalable"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -215.0
margin_right = 600.0
margin_bottom = 215.0
custom_constants/separation = 30
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUOnline" parent="Scalable/MainMenu" instance=ExtResource( 16 )]
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 1200, 200 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0666667, 0.0745098, 0.137255, 1 )
text = "ONLINE MULTIPLAYER"

[node name="HBoxContainer" type="HBoxContainer" parent="Scalable/MainMenu"]
margin_top = 230.0
margin_right = 1200.0
margin_bottom = 430.0
custom_constants/separation = 30

[node name="BUOnline2" parent="Scalable/MainMenu/HBoxContainer" instance=ExtResource( 16 )]
margin_right = 670.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0666667, 0.0745098, 0.137255, 1 )
text = "CREDITS"

[node name="BUOnline3" parent="Scalable/MainMenu/HBoxContainer" instance=ExtResource( 16 )]
margin_left = 700.0
margin_right = 1200.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0666667, 0.0745098, 0.137255, 1 )
text = "QUIT"

[node name="RegisterForm" parent="Scalable" instance=ExtResource( 8 )]
visible = false
margin_left = -1236.36
margin_top = -865.455
margin_right = 1257.64
margin_bottom = 640.545

[node name="NeutralPopup" parent="Scalable" instance=ExtResource( 12 )]
visible = false

[node name="ErrorPopup" type="PopupPanel" parent="Scalable"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1745.45
margin_top = -981.818
margin_right = 1745.45
margin_bottom = 981.818
rect_min_size = Vector2( 3490.91, 1963.64 )
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Scalable/ErrorPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Scalable/ErrorPopup/CenterContainer"]
margin_left = 1245.0
margin_top = 840.0
margin_right = 2245.0
margin_bottom = 1123.0
custom_constants/separation = 15
alignment = 2

[node name="Message" parent="Scalable/ErrorPopup/CenterContainer/Rows" instance=ExtResource( 9 )]
margin_top = -1.0
margin_right = 1000.0
margin_bottom = 199.0
rect_min_size = Vector2( 1000, 200 )
custom_styles/normal = SubResource( 14 )
custom_colors/font_color = Color( 0.941176, 0.960784, 0.976471, 1 )
text = "Message that is getting very long"
valign = 1
autowrap = true
script = ExtResource( 4 )

[node name="MenuButton" parent="Scalable/ErrorPopup/CenterContainer/Rows" instance=ExtResource( 16 )]
margin_left = 885.0
margin_top = 215.0
margin_right = 1000.0
margin_bottom = 283.0
rect_min_size = Vector2( 68, 0 )
size_flags_horizontal = 8
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.909804, 0.270588, 0.270588, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.960784, 0.976471, 1 )
custom_colors/font_color_pressed = Color( 0.788235, 0.839216, 0.87451, 1 )
text = "Close"
script = ExtResource( 4 )

[node name="Requests" type="Node" parent="."]

[node name="PingRequest" parent="Requests" instance=ExtResource( 10 )]

[node name="Animations" type="Node" parent="."]

[node name="EnterMenu" type="AnimationPlayer" parent="Animations"]
autoplay = "Title"
anims/Title = SubResource( 16 )
[connection signal="pressed" from="Scalable/MainMenu/BUOnline" to="." method="_on_BUOnline_pressed"]
[connection signal="pressed" from="Scalable/ErrorPopup/CenterContainer/Rows/MenuButton" to="Scalable/ErrorPopup" method="_on_MenuButton_pressed"]
[connection signal="request_completed" from="Requests/PingRequest" to="." method="_on_PingRequest_request_completed"]
